# Flequit

./: .editorconfig  .gitignore  Flequit.code-workspace  README.ja.md  README.md  bun.lockb  eslint.config.js  package.json  prettier.config.js  svelte.config.js  tsconfig.json  vite.config.js
app_client/: bun.lockb  eslint.config.mjs  package.json  vite.config.ts
app_client/src-tauri/: Cargo.toml  tauri.conf.json
docs/: .gitignore
docs/design/: architecture.md  data-structure.md  mode.md  schema.md  sync-flow.md  sync_flow.md  sync_policy.md
docs/design/api/: api.md
docs/design/data/: data-structure.md  tasks.md
docs/design/schema_logs/: README.md
docs/design/schema_tasks/: README.md
docs/design/theme/: README.md
docs/design/ui/: Flequit.drawio  main.md
docs/requirements/: accessibility.md
project.inlang/: project_id  settings.json
qwik-app/: bun.lockb  package.json  vite.config.ts
qwik-app/src-tauri/: tauri.conf.json
src/: _layout.svelte  app.css  app.d.ts  app.html  global.css  hooks.js  hooks.server.js
src/data/: sample-task-tree.ts
src/i18n/: en.json  i18n.ts  ja.json
src/layouts/: tasks.svelte
src/lib/: i18n.js
src/lib/actions/: click-outside.ts  url-parameter.ts
src/lib/components/: app-sidebar.svelte  app-sidebar2.svelte  nav-user.svelte  search-form.svelte  sidebar.svelte  task-calendar.svelte  task-detail.svelte  task-item.svelte  task-list.svelte  tasks.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte
src/types/: project.ts  sub-task.ts  tag.ts  task-list.ts  task.ts  task_list.ts
tests/: example.test.js
(+165 files in other folders)
